tests/deny_all_to_from_a_deployment_changed_netpol/connlist_output.txt
0.0.0.0-255.255.255.255 => default/deployment2[Deployment] : All Connections
default/deployment2[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/deployment2[Deployment] => default/deployment1[Deployment] : All Connections
