tests/deny_all_to_from_a_deployment_changed_netpol/diff_output_from_deny_all_to_from_a_deployment.txt
Connectivity diff:
diff-type: added, source: default/deployment2[Deployment], destination: default/deployment1[Deployment], dir1:  No Connections, dir2: All Connections
